Fix url tag for Django 1.5

--- a/jquery_uploader/templates/jquery_uploader/simple.html
+++ b/jquery_uploader/templates/jquery_uploader/simple.html
@@ -1,5 +1,6 @@
 {% load i18n %}
 {% load static %}
+{% load url from future %}
 <!-- CSS to style the file input field as button and adjust the Bootstrap progress bars -->
 <link rel="stylesheet" href="{% get_static_prefix %}jquery_uploader/css/simple.css">
 
