--- a/jquery_uploader/templates/jquery_uploader/jquery-ui.html
+++ b/jquery_uploader/templates/jquery_uploader/jquery-ui.html
@@ -49,24 +49,29 @@
 <script id="template-upload" type="text/x-tmpl">
 [% for (var i=0, file; file=o.files[i]; i++) { %]
     <tr class="template-upload fade">
-        <td class="preview"><span class="fade"></span></td>
-        <td class="name"><span>[%=file.name%]</span></td>
-        <td class="size"><span>[%=o.formatFileSize(file.size)%]</span></td>
-        [% if (file.error) { %]
-            <td class="error" colspan="2">Error [%=file.error%]</td>
-        [% } else if (o.files.valid && !i) { %]
-            <td>
-                <div class="progress progress-success progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0"><div class="bar" style="width:0%;"></div></div>
-            </td>
-            <td>[% if (!o.options.autoUpload) { %]
-                <button class="start">Start</button>
-            [% } %]</td>
-        [% } else { %]
-            <td colspan="2"></td>
-        [% } %]
-        <td>[% if (!i) { %]
-            <button class="cancel">Cancel</button>
-        [% } %]</td>
+        <td class="preview">
+            <span class="fade"></span>
+        </td>
+        <td class="name">
+            [%=file.name%]
+            [% if (file.error) { %]
+                <div>{% trans 'Error' %} [%=file.error%]</div>
+            [% } %]
+        </td>
+        <td class="size">
+            <p>[%=o.formatFileSize(file.size)%]</p>
+            [% if (!o.files.error) { %]
+                <div class="progress" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0"></div>
+            [% } %]
+        </td>
+        <td>
+            [% if (!o.files.error && !i && !o.options.autoUpload) { %]
+                <button class="start">{% trans 'Start' %}</button>
+            [% } %]
+            [% if (!i) { %]
+                <button class="cancel">{% trans 'Cancel' %}</button>
+            [% } %]
+        </td>
     </tr>
 [% } %]
 </script>
@@ -76,23 +81,26 @@
 <script id="template-download" type="text/x-tmpl">
 [% for (var i=0, file; file=o.files[i]; i++) { %]
     <tr class="template-download fade">
-        [% if (file.error) { %]
-            <td></td>
-            <td class="name"><span>[%=file.name%]</span></td>
-            <td class="size"><span>[%=o.formatFileSize(file.size)%]</span></td>
-            <td class="error" colspan="2">>Error [%=file.error%]</td>
-        [% } else { %]
-            <td class="preview">[% if (file.thumbnail_url) { %]
-                <a href="[%=file.url%]" title="[%=file.name%]" data-gallery="gallery" download="[%=file.name%]"><img src="[%=file.thumbnail_url%]"></a>
-            [% } %]</td>
-            <td class="name">
-                <a href="[%=file.url%]" title="[%=file.name%]" data-gallery="[%=file.thumbnail_url&&'gallery'%]" download="[%=file.name%]">[%=file.name%]</a>
-            </td>
-            <td class="size"><span>[%=o.formatFileSize(file.size)%]</span></td>
-            <td colspan="2"></td>
-        [% } %]
         <td>
-            <button class="delete" data-type="[%=file.delete_type%]" data-url="[%=file.delete_url%]"[% if (file.delete_with_credentials) { %] data-xhr-fields='{"withCredentials":true}'[% } %]>Delete</button>
+            <span class="preview">
+                [% if (file.thumbnail_url) { %]
+                    <a href="[%=file.url%]" title="[%=file.name%]" class="gallery" download="[%=file.name%]" data-gallery><img src="[%=file.thumbnail_url%]"></a>
+                [% } %]
+            </span>
+        </td>
+        <td>
+            <p class="name">
+                <a href="[%=file.url%]" title="[%=file.name%]" download="[%=file.name%]" [%=file.thumbnail_url?'data-gallery':''%]>[%=file.name%]</a>
+            </p>
+            [% if (file.error) { %]
+                <div><span class="error">{% trans 'Error' %}</span> [%=file.error%]</div>
+            [% } %]
+        </td>
+        <td>
+            <span class="size">[%=o.formatFileSize(file.size)%]</span>
+        </td>
+        <td>
+            <button class="delete" data-type="[%=file.deleteType%]" data-url="[%=file.deleteUrl%]"[% if (file.deleteWithCredentials) { %] data-xhr-fields='{"withCredentials":true}'[% } %]>Delete</button>
             <input type="checkbox" name="delete" value="1" class="toggle">
             <!-- Fields to work properly with the uploader -->
             <input type="hidden" name="jquery_uploads" value="[%=file.url%]">
@@ -143,11 +151,12 @@ $(function () {
     tmpl.regexp = /([\s'\\])(?![^%]*%\])|(?:\[%(=|#)([\s\S]+?)%\])|(\[%)|(%\])/g;
 
     // Initialize the jQuery File Upload widget:
-    // Uncomment the following to send cross-domain cookies:
     $("#fileupload").fileupload({
         maxFileSize: {{ max_file_size }},
         previewMaxHeight: {{ preview_max_height }},
         previewMaxWidth: {{ preview_max_width }},
+
+        // Uncomment the following to send cross-domain cookies:
         //xhrFields: {withCredentials: true},
     });
 
@@ -155,4 +164,6 @@ $(function () {
 </script>
 
 <!-- The XDomainRequest Transport is included for cross-domain file deletion for IE8+ -->
-<!--[if gte IE 8]><script src="js/cors/jquery.xdr-transport.js"></script><![endif]-->
+<!--[if gte IE 8]>
+<script src="{% get_static_prefix %}jquery_uploader/js/cors/jquery.xdr-transport.js"></script>
+<![endif]-->
